# CanvasCalendarTUI

./: Cargo.toml  README.md
src/: data_fetch.rs  main.rs  menu.rs  types.rs
