[package]
name = "canvas-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
webbrowser = "1.0.3"
